💄 Add a z-index: 10 to show soundboard button, to fix the text upper than that button

--- a/src/app/shared/components/soundboard/show-soundboard-button/show-soundboard-button.component.scss
+++ b/src/app/shared/components/soundboard/show-soundboard-button/show-soundboard-button.component.scss
@@ -4,6 +4,7 @@
   right: 135px;
   width: 70px;
   height: 70px;
+  z-index: 10;
 
   button {
     width: 100%;
