--- a/src/app/shared/components/soundboard/show-soundboard-button/soundboard/soundboard.component.scss
+++ b/src/app/shared/components/soundboard/show-soundboard-button/soundboard/soundboard.component.scss
@@ -11,13 +11,14 @@
   box-shadow: 0px 0px 10px black;
   padding: 15px;
   z-index: 2;
+  border-radius: 8px;
 
   #soundboard-bg {
+    border-radius: 8px;
     position: absolute;
     width: 100%;
     height: 100%;
     z-index: 1;
-    border-radius: 8px;
     filter: brightness(70%);
   }
 
@@ -78,10 +79,5 @@
     padding: 15px 15px 15px 19px;
     align-self: flex-start;
     text-align: center;
-  }
-}
-@media (max-width: 820px) {
-  #soundboard {
-    background-color: red;
   }
 }
